# RustProject

./: .gitignore
goal_agent/: Cargo.toml
goal_agent/src/: email_agent.rs  engine.rs  key.txt  main.rs  memory.rs  routes.rs
